# edge-case-enum

./: pyproject.toml
edge_case_enum/: __main__.py  report.py  scanner.py
tests/: test_cli.py  test_report.py  test_scanner.py
